# url-shortener

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 000001_create_url_table.up.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs  openapi.rs  router.rs  services.rs  state.rs
src/routes/: health.rs  mod.rs  redirect.rs  shorten.rs  stats.rs
tests/: api_tests.rs
